# ZeroHuntAI

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
rules/: custom_rules.yaml
scanner/: __init__.py  advanced_scanner.py  ai_model.py  analyzer.py  ast_analyzer.py  controlflow_analyzer.py  dataflow_analyzer.py  dependency_analyzer.py  github_scanner.py  local_scanner.py  query_engine.py  report_generator.py  symbolic_executor.py  visualization.py
templates/: base.html  call_graph_template.html  index.html  report_template.html  results.html
utils/: __init__.py  config.py  file_utils.py  logger.py  sensitive_data_detector.py  vulnerability_patterns.py
